fix: social icons alignment

--- a/src/scss/components/socials.scss
+++ b/src/scss/components/socials.scss
@@ -45,7 +45,10 @@
     }
 
     &__link {
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         &:hover {
             .icon {
                 fill: $colors-text-highlight;
